update benefits section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header hidden class="header">
         <div class="container navigation">
             <nav class="nav-header">
                 <a class="logo header-logo" href="./index.html">Web<span class="logo-dark">Studio</span></a>
@@ -38,7 +38,7 @@
     </header>
     <main class="main">
         <!-- Hero section -->
-        <section class="hero-section">
+        <section hidden class="hero-section">
             <div class="container">
                 <h1 class="hero-title">Effective Solutions
                     for Your Business</h1>
@@ -57,7 +57,7 @@
                                 <use href="./images/icons.svg#icon-antenna"></use>
                             </svg>
                         </div>
-                        <h3 class="subtitle">Strategy</h3>
+                        <h3 class="benefits-subtitle">Strategy</h3>
                         <p class="text-section">Our goal is to identify the business
                             problem to walk away with the perfect and creative solution.
                         </p>
@@ -68,7 +68,7 @@
                                 <use href="./images/icons.svg#icon-clock"></use>
                             </svg>
                         </div>
-                        <h3 class="subtitle">Punctuality</h3>
+                        <h3 class="benefits-subtitle">Punctuality</h3>
                         <p class="text-section">Bring the key message to the brand's audience for the best price
                             within
                             the
@@ -81,7 +81,7 @@
                                 <use href="./images/icons.svg#icon-diagram"></use>
                             </svg>
                         </div>
-                        <h3 class="subtitle">Diligence</h3>
+                        <h3 class="benefits-subtitle">Diligence</h3>
                         <p class="text-section">Research and confirm brands that present the strongest digital
                             growth opportunities and minimize risk.</p>
                     </li>
@@ -91,7 +91,7 @@
                                 <use href="./images/icons.svg#icon-astronaut"></use>
                             </svg>
                         </div>
-                        <h3 class="subtitle">Technologies</h3>
+                        <h3 class="benefits-subtitle">Technologies</h3>
                         <p class="text-section">Design practice focused on digital experiences. We bring forth a
                             deep
                             passion for
@@ -102,7 +102,7 @@
         </section>
 
         <!-- Teams section -->
-        <section class="section teams">
+        <section hidden class="section teams">
             <div class="container">
                 <h2 class="title-section">Our team</h2>
                 <ul class="list-teams">
@@ -211,7 +211,7 @@
         </section>
 
         <!-- Portfolio section -->
-        <section class="section" id="portfolio">
+        <section hidden class="section" id="portfolio">
             <div class="container">
                 <h2 class="title-section" id="portfolio-section">Our Portfolio</h2>
                 <ul class="list-portfolio">
@@ -307,7 +307,7 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <footer hidden class="footer">
         <div class="container footer-container">
             <div class="footer-logo-column"><a class="logo footer-logo" href="./index.html">Web<span
                         class="logo-light">Studio</span></a>
