--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </section>
 
         <!-- Teams section -->
-        <section hidden class="section teams">
+        <section class="section teams">
             <div class="container">
                 <h2 class="title-section">Our team</h2>
                 <ul class="list-teams">
@@ -211,7 +211,7 @@
         </section>
 
         <!-- Portfolio section -->
-        <section hidden class="section" id="portfolio">
+        <section class="section" id="portfolio">
             <div class="container">
                 <h2 class="title-section" id="portfolio-section">Our Portfolio</h2>
                 <ul class="list-portfolio">
