add mobile hero

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </header>
     <main class="main">
         <!-- Hero section -->
-        <section hidden class="hero-section">
+        <section class="hero-section">
             <div class="container">
                 <h1 class="hero-title">Effective Solutions
                     for Your Business</h1>
