--- a/index.html
+++ b/index.html
@@ -354,14 +354,12 @@
         </section>
     </main>
 
-    <footer hidden class="footer">
+    <footer class="footer">
         <div class="container footer-container">
             <div class="footer-logo-column"><a class="logo footer-logo" href="./index.html">Web<span
                         class="logo-light">Studio</span></a>
-                <p class="text-footer">Increase the flow of customers and sales for your business with digital
-                    marketing
-                    &
-                    growth solutions.</p>
+                <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing
+                    & growth solutions.</p>
             </div>
             <div class="footer-messenger">
                 <p class="subtitle-footer">Social media</p>
